# Why-Learn-C

./: .gitattributes  .gitignore  AUTHORS  Contributing.md  Errata.md  LICENSE.txt  Makefile.am  NEWS  README.md  bootstrap  configure.ac
lib/: .gitignore  Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4  pjl_check_lang.m4  pjl_compile.m4  pjl_must_compile.m4
src/: .gitignore  01-putubin.c  01-strcpy-v1.c  01-strcpy-v2.c  01-swapi-v1.c  01-swapi-v3.c  02-tabs_spaces-v1.c  03-swap_bytes.c  06-alloc2d.c  06-qsort_example.c  09-args.c  09-fl_print_error.c  12-orbits-fscanf.c  12-stat.c  14-slist-v1-mtx.c  14-tss_example.c  16-sample_assert.c  17-cas_impl.c  17-consume.c  18-fatal_error.c  19-type_traits.c  20-setjmp_error_codes.c  20-setjmp_example.c  20-wrap_setjmp.c  23-strbuf.c  23-string-v2.c  26-itoken.c  26-token-v2.c  Makefile.am  PRINTF_FORMAT.c  README.md  acquire_release.c  alloc2d.c  args.c  c23_strtol.c  c_exception.c  call_once.c  cap_first.c  check_strtol.c  cnd_example.c  (+62 more)
src/PRINTF_FORMAT.d/: PRINTF_FORMAT.h  example.h
src/acquire_release.d/: consumer.h  producer.h  work.h
src/alloc2d.d/: alloc2d.h
src/args.d/: main.h
src/c23_strtol.d/: c23_strtol.h
src/c_exception.d/: cx_catch.h  cx_exception.h  cx_finally.h  cx_impl_catch.h  cx_impl_state-v2.h  cx_impl_state-v3.h  cx_impl_throw-v1.h  cx_impl_throw-v2.h  cx_impl_try_block-v1.h  cx_impl_try_block-v2.h  cx_impl_try_block-v3.h  cx_impl_try_cond-v1.h  cx_impl_try_cond-v2.h  cx_impl_try_cond-v3.h  cx_terminate.h  cx_throw.h  cx_try-v1.h  cx_try-v2.h  read_file.h  requirements.h
src/call_once.d/: call_once.h
src/cas_impl.d/: cas_impl.h
src/check_strtol.d/: check_strtol.h
src/cnd_example.d/: consumer_main.h  producer_main.h
src/consume.d/: consumer.h  producer.h  work_avail.h
src/cp-v2.d/: cp-v2.h
src/cp-v4.d/: check_open.h  main.h  perror_exit.h  usage.h
src/fatal_error.d/: fatal_error.h
src/fl_print_error.d/: fl_print_error.h
src/handy/: ARRAY_SIZE.h  BLOCK.h  DECL_UNUSED.h  FLPRINTF.h  INTERNAL_ERROR.h  NAME2.h  STRLITLEN-v1.h  UNIQUE_NAME.h  VA_ARGS_COUNT.h
src/hash_table.d/: DINT-DPTR.h  HT_PRIME.h  fnv1a.h  ht_cleanup.h  ht_delete.h  ht_empty.h  ht_find.h  ht_fnv1a.h  ht_grow.h  ht_init.h  ht_insert.h  ht_insert_rv.h  ht_iter.h  ht_next.h  insert_example.h  types.h
src/islist.d/: functions.h  struct.h
src/islist_lf-v2.d/: islist_lf-v2.h
src/islist_lf.d/: islist_lfpop.h  islist_lfpush.h
src/lineno_stack.d/: lineno_stack.h
src/ls-v1.d/: ls-v1.h
src/mstrcat.d/: mstrcat.h
src/mtx_lockall.d/: mtx_lockall-macro.h  mtx_lockall.h
src/orbits-fgets.d/: orbits-fgets.h
src/orbits-fscanf.d/: read_planet_data.h
src/orbits-struct.d/: orbits-struct.h
src/orbits.d/: orbits.h
src/print_csi.d/: print_csi.h
src/print_hist.d/: print_hist.h
src/print_mcsi.d/: print_mcsi.h
src/putubin.d/: putubin.h
src/qsort_example.d/: qsort_example.h
src/sample_assert.d/: sample_assert.h
src/setjmp_error_codes.d/: setjmp_error_codes.h
src/shrd_obj.d/: shrd_dec.h  shrd_inc.h  shrd_new.h  shrd_obj.h
src/slist-v1-mtx.d/: slist-v1-mtx.h
src/slist-v1.d/: const_slist_find.h  functions.h  slist_find.h  struct.h
src/slist-v2.d/: DINT-DPTR.h  dup_str.h  free_if.h  front-back-empty.h  init-cleanup.h  not_contains_str.h  pop.h  push.h  slist_front_int_example.h  slist_front_ptr_example.h  structs.h
src/stat.d/: stat.h
src/str_is_any.d/: str_is_any.h
src/strbuf.d/: cleanup.h  printf.h  puts.h  reserve.h  reset.h  str_list.h  struct.h  take.h
src/string-v1.d/: cleanup.h  main.h  puts.h  struct.h
src/string-v2.d/: printf.h  puts_putc.h  putsn.h  struct.h  take.h
src/swap16of32.d/: swap16of32.h
src/swap_bytes.d/: swap_bytes.h
src/swapi-v1.d/: swapi-v1.h
src/swapi-v2.d/: swapi-v2.h
src/swapi-v3.d/: swapi-v3.h
src/tabs_spaces-v1.d/: tabs_spaces-v1.h
src/tabs_spaces-v2.d/: tabs_spaces-v2.h
src/thrd_hello_world.d/: thrd_hello_world.h
src/token-v1.d/: token.h  token_cpy.h
src/token-v2.d/: token.h
src/token-v3.d/: token.h
src/tss_example.d/: tss_example.h
src/type_traits.d/: INT_MAX_EXPR.h  INT_MIN_EXPR.h  IS_ARITHMETIC_EXPR.h  IS_ARRAY_EXPR.h  IS_C_STR_EXPR.h  IS_FLOATING_POINT_EXPR.h  IS_INTEGRAL_EXPR.h  IS_POINTER_EXPR.h  IS_SAME_TYPE.h  IS_SIGNED_EXPR.h  IS_SIGNED_TYPE.h  IS_TYPE_EXPR.h  IS_UNSIGNED_EXPR.h  TO_SIGNED_EXPR.h  TO_UNSIGNED_EXPR.h  UNDERLYING_TYPE.h
src/user.d/: find_root.h  slist_find.h  struct-cmp.h
src/util/: STATIC_ASSERT_EXPR.h  STATIC_IF.h
src/vnsum.d/: vnsum.h
src/vstr_is_any.d/: vstr_is_any.h
src/wlc_string.d/: wlc_string.h
src/wrap_setjmp.d/: wrap_setjmp.h
